# UTF-Nate

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  config.template.toml  flake.nix  guix.scm  keys.template.toml  spotify  ubuntu-setup.sh
.githooks/: pre-commit
.guix/: generate-imports.sh  generate-package.sh
.guix/modules/: utf-nate-import.scm  utf-nate-package.scm
database/: create-tables.sql  get-bot-intro.sql  get-intro.sql  get-volume-play.sql  set-bot-intro.sql  set-intro.sql  set-volume-clip.sql  set-volume-play.sql
nix/: docker.nix  package.nix
resources/cmd/: cowsay  date  factorio  ip  valheim
resources/cmd-template/: service.sh  steamcmd_update.sh  systemctl.sh
resources/cmd/factorio/: start  stop
resources/cmd/valheim/: start  stop  update
resources/database/: get-outro.sql  get-volume-clip.sql  set-outro.sql  set-volume-play.sql
resources/web/css/: index.css
setup/: debian-build-setup.sh  debian-run-setup.sh  debian-setup.sh  postgres-create-database.psql
src/: audio.rs  cmd.rs  commands.rs  configuration.rs  data.rs  encrypt.rs  handler.rs  herald.rs  http.rs  interaction.rs  main.rs  parser.rs  persistence.rs  spotify.rs  unicode.rs  util.rs  voice.rs  youtube.rs
src/commands/: cards.rs  cmd.rs  external.rs  help.rs  herald.rs  http.rs  join.rs  mod.rs  play.rs  queue.rs  roll.rs  unicode.rs  voice.rs
src/commands/cards/: generic.rs
src/commands/help/: generic.rs  mod.rs  poise.rs
src/commands/help/help/: help.md
src/commands/herald/: generic.rs  http.rs  introbot.md  mod.rs  poise.rs
src/commands/herald/help/: intro.md  outro.md
src/commands/join/: generic.rs  http.rs  mod.rs  poise.rs  summon.md
src/commands/join/help/: banish.md
src/commands/play/: generic.rs  http.rs  mod.rs  poise.rs
src/commands/play/help/: clip.md  play.md  playnext.md  playnow.md
src/commands/queue/: generic.rs  http.rs  mod.rs  move.md  poise.rs  queue.md  shuffle.md  shufflenow.md  skip.md  stop.md
src/commands/queue/help/: loop.md  pause.md  queue.md  unpause.md
src/commands/roll/: generic.rs  http.rs  mod.rs  poise.rs
src/commands/roll/help/: roll.md
src/commands/token/: http.rs  mod.rs  poise.rs
src/commands/token/help/: token.md
src/commands/unicode/: http.rs  mod.rs  poise.rs  unicode.md
src/commands/voice/: generic.rs  http.rs  list.md  mod.rs  poise.rs  volume_clip.md  volume_play.md
src/commands/voice/help/: volume.md  volume_get.md  volume_now.md
src/herald/: generic.rs
src/persistence/: database.rs  mod.rs
src/spotify/: api.rs  mod.rs  scrape.rs
src/util/: conv.rs  interaction.rs  mod.rs  ord_key.rs  respond.rs  say.rs
src/voice/: generic.rs
src/youtube/: api.rs  mod.rs
templates/: command_form.html  head.html  response.html
web/css/: index.css
