[package]
name = "utf-nate"
version = "0.4.0"
authors = ["sampley <sampley@ualberta.ca>"]
edition = "2021"
description = "A discord bot for playing music"
repository = "https://github.com/asampley/UTF-Nate"

[features]
default = ["http-interface", "tls-rustls"]
tls-rustls = ["reqwest/rustls-tls", "serenity/rustls_backend", "songbird/rustls", "sqlx/tls-rustls"]
tls-native-tls = ["reqwest/native-tls", "serenity/native_tls_backend", "songbird/native", "sqlx/tls-native-tls"]
http-interface = ["dep:askama", "dep:axum", "dep:axum-extra", "dep:chrono", "dep:hyper", "dep:public-ip", "dep:tower-http"]

[profile.dev.build-override]
opt-level = 3

[package.metadata.deb]
depends = ["$auto"]
suggests = ["youtube-dl", "python", "postgresql"]
assets = [
	["target/release/utf-nate", "usr/bin/", "755"],
]

[dependencies]
async-trait = "0.1.77"
caith = "4.2"
dashmap = "5.5"
futures = "0.3"
fxhash = "0.2"
itertools = "0.11"
markdown = "=1.0.0-alpha.9"
nom = "7.1"
rand = "0.8"
regex = "1.9"
ring = "0.16"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
toml = "0.7"
tracing = "0.1.37"
tracing-subscriber = "0.3"
triple_accel = "0.4"
uuid = "1.6"
walkdir = "2.3"

[dependencies.askama]
version = "0.12"
optional = true

[dependencies.axum]
version = "0.6"
optional = true

[dependencies.axum-extra]
version = "0.7"
optional = true
features = ["cookie"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
optional = true

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies.hyper]
version = "0.14.27"
optional = true

[dependencies.iso8601-duration]
version = "0.2.0"
features = ["serde"]

[dependencies.poise]
version = "0.6.0"
default-features = false
features = ["cache", "handle_panics"]

[dependencies.public-ip]
version = "0.2.2"
optional = true

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_with]
version = "3.1"
features = ["base64"]

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "unstable_discord_api", "voice"]

[dependencies.songbird]
version = "0.4.0"
default-features = false
features = ["builtin-queue", "driver", "gateway", "serenity"]

[dependencies.symphonia]
version = "0.5.2"
features = ["all"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["any", "runtime-tokio", "postgres", "sqlite"]

[dependencies.tokio]
version = "1.34"
features = ["macros", "rt-multi-thread"]

[dependencies.tower-http]
version = "0.4.3"
features = ["fs"]
optional = true

[lints.clippy]
needless_return="allow"
